Change height properties on main sections/banners to prevent vertical squish

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
 .bottom-banner,
 .footer {
 
-    flex: 1 1 auto;
+    flex: 1 0 auto;
 
     width: 100%;
 }
@@ -91,7 +91,7 @@
 
 .middle-banner {
 
-    height: 70vh;
+    min-height: 70vh;
 
     background: url(./assets/paperplane-notrail.svg) 1255px 25px no-repeat,
                 url(./assets/dashed-line-trail.png) 20px 120px no-repeat, #7C77B9 /*#A663CC*/;
@@ -148,8 +148,8 @@
 .about-send-container,
 .about-better {
 
-    flex: 1 1 auto;
-    height: 60vh;
+    flex: 1 0 auto;
+    min-height: 60vh;
 
     font-size: 28px;
     font-weight: 400;
@@ -502,7 +502,7 @@
 
 .form-container,
 .note-container {
-    height: 70vh;
+    min-height: 70vh;
     width: 100%;
     background-color: #7C77B9;
     /*background-color: #A663CC;*/
@@ -711,7 +711,7 @@
 
     .middle-banner {
 
-        height: 70vh;
+        min-height: 70vh;
     
         background: url(./assets/paperplane-notrail.svg) 1040px 25px no-repeat,
                     url(./assets/dashed-line-trail.png) 20px 120px no-repeat, #7C77B9 /*#A663CC*/;
@@ -779,7 +779,7 @@
 
     .middle-banner {
 
-        height: 40vh;
+        min-height: 40vh;
     
         background: url(./assets/paperplane-notrail.svg) 610px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
@@ -822,8 +822,8 @@
     .about-send-container,
     .about-better {
 
-        flex: 1 1 auto;
-        height: 40vh;
+        flex: 1 0 auto;
+        min-height: 40vh;
 
         font-size: 20px;
         font-weight: 400;
@@ -845,7 +845,7 @@
 
         margin-left: 0px;
 
-        height: 30vh;
+        min-height: 30vh;
     }
     .about-send {
 
@@ -856,7 +856,7 @@
         margin-left: 0px;
         margin-right: 0px;
         transform: skewX(0deg);
-        height: 20vh;
+        min-height: 20vh;
     
     }
     .about-send-container:hover {
@@ -902,7 +902,7 @@
         font-weight: 400;
         text-shadow: 1px 1px 2px rgba(0, 0, 0, .3);
 
-        height: 10vh;
+        min-height: 10vh;
 
         box-shadow: 0px -3px 4px rgba(0, 0, 0, .6),
                     0px 3px 4px rgba(252, 252, 252, 0.6);
@@ -913,7 +913,7 @@
         
         overflow: visible;
         line-height: 40px;
-        height: 30vh;
+        min-height: 30vh;
 
     }
     .about-better>p:first-child {
@@ -1025,7 +1025,7 @@
 
     .middle-banner {
 
-        height: 40vh;
+        min-height: 40vh;
     
         background: url(./assets/paperplane-notrail.svg) 565px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
@@ -1098,7 +1098,7 @@
 
     .middle-banner {
 
-        height: 40vh;
+        min-height: 40vh;
     
         background: url(./assets/paperplane-notrail.svg) 530px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
@@ -1145,7 +1145,7 @@
 
     .middle-banner {
 
-        height: 40vh;
+        min-height: 40vh;
     
         background: url(./assets/paperplane-notrail.svg) 480px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
@@ -1191,7 +1191,7 @@
 
     .middle-banner {
 
-        height: 40vh;
+        min-height: 40vh;
     
         background: url(./assets/paperplane-notrail.svg) 432px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
@@ -1231,7 +1231,7 @@
 
     .middle-banner {
 
-        height: 40vh;
+        min-height: 40vh;
     
         background: url(./assets/paperplane-notrail.svg) 410px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
@@ -1285,7 +1285,7 @@
 
     .middle-banner {
 
-        height: 40vh;
+        min-height: 40vh;
     
         background: url(./assets/paperplane-notrail.svg) 370px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
@@ -1331,7 +1331,7 @@
 
     .middle-banner {
 
-        height: 40vh;
+        min-height: 40vh;
     
         background: url(./assets/paperplane-notrail.svg) 320px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
@@ -1388,7 +1388,7 @@
 
     .middle-banner {
 
-        height: 30vh;
+        min-height: 30vh;
     
         background: url(./assets/paperplane-notrail.svg) 255px 55px no-repeat,
                     url(./assets/dashed-line-trail.png) 0 80px no-repeat, #7C77B9 /*#A663CC*/;
